--- a/public/style.scss
+++ b/public/style.scss
@@ -1,11 +1,13 @@
-*{
+* {
     box-sizing: border-box;
     margin: 0;
     padding: 0;
     position: relative;
 }
 
-.Header{
+$blue:rgb(0, 112, 243);
+$blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+ .Header {
     height: 40px;
     position: absolute;
     top: 20px;
@@ -14,15 +16,14 @@
     align-items: center;
     flex-direction: row-reverse;
     justify-content: center;
-
-    .right{
+    .right {
         width: 40%;
         direction: rtl;
         background: none;
         height: 40px;
         display: flex;
-        a{
-            padding: 7px 15px ;
+        a {
+            padding: 7px 15px;
             margin: 0px 10px;
             border-radius: 4px;
             text-decoration: none;
@@ -30,58 +31,49 @@
             font-family: Arial, Helvetica, sans-serif;
             display: flex;
             align-items: center;
-            flex-direction:row;
+            flex-direction: row;
             width: fit-content;
         }
-
-
-        .home-btn{
+        .home-btn {
             color: black;
-            border: 2px solid rgb(47, 47, 233);
+            border: 2px solid $blue;
             transition: .5s ease all;
-
-            &:hover{
-                background: rgb(65, 65, 235);
+            &:hover {
+                background: $blue;
                 color: rgb(204, 204, 204);
-
-                svg{
+                svg {
                     fill: rgb(204, 204, 204);
                 }
-
             }
-           
         }
-
-
-        .blog-btn{
+        .blog-btn {
             color: rgb(204, 204, 204);
-            background: rgb(47, 47, 233);
+            background: $blue;
             transition: .5s ease all;
-            &:hover{
-                background: rgb(65, 65, 235);
-                box-shadow: .5px .5px 1px 1px rgb(65, 65, 235);
+            &:hover {
+                background: $blue;
+                box-shadow: $blue-shadow;
             }
-            svg{
+            svg {
                 fill: rgb(204, 204, 204);
             }
         }
-
-        svg{
+        svg {
             height: 20px;
             transition: .5s ease all;
             margin-right: 8px;
         }
     }
-    .left{
+    .left {
         width: 60%;
         height: 100%;
-        h4{
-        color:rgb(65, 65, 235);
-        font-size: 25px;
-        direction: rtl;
-        position: absolute;
-        left: 15px;
-        top: 3px;
+        h4 {
+            color: $blue;
+            font-size: 25px;
+            direction: rtl;
+            position: absolute;
+            left: 15px;
+            top: 3px;
         }
     }
 }
