--- a/public/style.css
+++ b/public/style.css
@@ -5,15 +5,22 @@
   position: relative;
 }
 
+@font-face {
+  font-family: yekan;
+  src: url("./asses/Yekan.ttf");
+}
+
 .Header {
   height: 40px;
   position: absolute;
   top: 20px;
+  left: 0;
   width: 100%;
   display: flex;
   align-items: center;
   flex-direction: row-reverse;
   justify-content: center;
+  z-index: 5555;
 }
 
 .Header .right {
@@ -45,15 +52,15 @@
 
 .Header .right .home-btn:hover {
   background: #0070f3;
-  color: #cccccc;
+  color: #faf6f6;
 }
 
 .Header .right .home-btn:hover svg {
-  fill: #cccccc;
+  fill: #faf6f6;
 }
 
 .Header .right .blog-btn {
-  color: #cccccc;
+  color: #faf6f6;
   background: #0070f3;
   transition: .5s ease all;
 }
@@ -64,7 +71,7 @@
 }
 
 .Header .right .blog-btn svg {
-  fill: #cccccc;
+  fill: #faf6f6;
 }
 
 .Header .right svg {
@@ -85,5 +92,36 @@
   position: absolute;
   left: 15px;
   top: 3px;
+}
+
+.wrapper {
+  position: absolute;
+  top: 300px;
+  left: 50%;
+  transform: translatex(-50%);
+  width: 80%;
+  height: 100vh;
+  background: #faf6f6;
+  border-radius: 10px;
+  border: 2px solid #e7e3e3;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+  flex-direction: column;
+}
+
+.wrapper .card {
+  font-family: yekan, Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: row-reverse;
+  justify-content: space-between;
+  align-items: center;
+  direction: rtl;
+  width: 80%;
+  height: fit-content;
+}
+
+.wrapper .card .left img {
+  height: 200px;
 }
 /*# sourceMappingURL=style.css.map */
