--- a/public/style.scss
+++ b/public/style.scss
@@ -7,7 +7,7 @@
 $font-fa: yekan ,Arial, Helvetica, sans-serif;
 $blue:rgb(0, 112, 243);
 $bg-white:rgb(250,246,246);
-$border-white:rgb(231, 227, 227);
+$border-white:rgb(231, 227, 227) solid;
 $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
 @font-face{
     font-family: yekan ;
@@ -86,20 +86,27 @@ $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
     }
 }
 .wrapper{
+    .blob{position: absolute; left: -70px; height: 200px; width: 200px; top: -70px;}
     position: absolute;
     top: 300px;
+    overflow: hidden;
     left: 50%;
     transform: translatex(-50%);
     width: 80%;
-    height: 100vh;
+    height: 200vh;
     background: rgb(250, 246, 246);
     border-radius: 10px;
-    border: 2px solid rgb(231, 227, 227);
+    border: 2px $border-white;
     display: flex;
     align-items: center;
-    justify-content: space-around;
     flex-direction: column;
     .card{
+        .left{
+            max-width: 30%;
+            img{
+                        height: 150px;
+               }
+             }
         font-family: $font-fa;
             display: flex;
             flex-direction: row-reverse;
@@ -108,11 +115,33 @@ $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
             direction: rtl;
             width: 80%;
             height: fit-content;
+            margin-top: 100px;
+            background: none;
+
+            .right{
+                max-width: 70%;
+                display: flex;
+                flex-direction: column;
+                align-items: flex-start;
+                justify-content: space-around;
+                h1{
+                    padding: 10px 0;
+                    font-size: 42px;
+                }
+                .__bottom{
+                    margin-top: 250px;
+                    span{
+                        color:$blue;
+                    }
+                    p{
+                        color: #111 ;
+
+                       
+                    }
+                }
+            }
+            
          
-    .left{
-        img{
-                    height: 200px;
-           }
-         }
+  
      }
 }
