--- a/public/style.scss
+++ b/public/style.scss
@@ -9,6 +9,7 @@ $blue:rgb(0, 112, 243);
 $bg-white:rgb(250,246,246);
 $border-white:rgb(231, 227, 227) solid;
 $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+$white-shadow:  rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
 @font-face{
     font-family: yekan ;
     src: url('./asses/Yekan.ttf');
@@ -100,14 +101,16 @@ $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
     display: flex;
     align-items: center;
     flex-direction: column;
-    .card{
+    .card1{
+        .blob{position: absolute; left: -110px; height: 200px; width: 200px; top: 85%;}
         .left{
             max-width: 30%;
             img{
                         height: 150px;
                }
              }
-        font-family: $font-fa;
+            overflow: hidden;
+            font-family: $font-fa;
             display: flex;
             flex-direction: row-reverse;
             justify-content: space-between;
@@ -115,8 +118,11 @@ $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
             direction: rtl;
             width: 80%;
             height: fit-content;
+            padding:2.5rem;
             margin-top: 100px;
             background: none;
+            border: 1px $border-white;
+            box-shadow: $white-shadow;
 
             .right{
                 max-width: 70%;
@@ -127,21 +133,48 @@ $blue-shadow:  rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
                 h1{
                     padding: 10px 0;
                     font-size: 42px;
+                    color: #111 ;
+                   
+
                 }
                 .__bottom{
                     margin-top: 250px;
+
+                    h1 span{
+                        font-size: inherit;
+                    }
+                    
                     span{
                         color:$blue;
+                        font-size: 17px;                        
                     }
                     p{
                         color: #111 ;
-
+                        font-size: 17px;                        
                        
                     }
                 }
             }
-            
-         
-  
      }
+}
+.card2{
+    overflow: hidden;
+    font-family: $font-fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    align-items: center;
+    direction: rtl;
+    width: 80%;
+    height: fit-content;
+    padding:2.5rem;
+    margin-top: 100px;
+    border: 1px $border-white;
+    box-shadow: $white-shadow;
+
+    .top{
+        img{
+            height: 170px;
+        }
+    }
 }
