--- a/public/style.css
+++ b/public/style.css
@@ -11,10 +11,23 @@
 }
 
 .footer {
-  background: blue;
-  height: 200px;
-  width: 100%;
+  background: #faf6f6;
+  box-shadow: rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+  border-radius: 5px;
+  border: 2px #e7e3e3 solid;
+  color: #111111;
+  height: 100px;
+  font-family: yekan, Arial, Helvetica, sans-serif;
+  font-size: 22px;
+  width: 80%;
+  margin: 30px 0px;
   z-index: 222222222;
+  left: 0;
+  bottom: 0;
+  display: flex;
+  text-align: center;
+  justify-content: center;
+  flex-direction: column;
 }
 
 .Header {
@@ -262,5 +275,44 @@
 
 .card2 .bottom div img:hover {
   box-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
+}
+
+.card3 {
+  overflow: hidden;
+  font-family: yekan, Arial, Helvetica, sans-serif;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  direction: rtl;
+  width: 80%;
+  height: fit-content;
+  padding: 2.5rem;
+  margin-top: 100px;
+  border: 3px #e7e3e3 solid;
+  box-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
+}
+
+.card3:hover {
+  box-shadow: rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+}
+
+.card3 .row {
+  padding: 1rem;
+  line-height: 22px;
+}
+
+.card3 .row p {
+  color: #111111;
+}
+
+.card3 .row p span {
+  color: #0070f3;
+  margin: 0 5px;
+}
+
+.card3 .last-row h1 {
+  color: #0070f3;
+  text-align: center;
+  padding: 2rem;
 }
 /*# sourceMappingURL=style.css.map */
