--- a/public/style.scss
+++ b/public/style.scss
@@ -26,10 +26,23 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
 }
 
 .footer {
-    background: blue;
-    height: 200px;
-    width: 100%;
+    background: $bg-white;
+    box-shadow: $blue-shadow;
+    border-radius: 5px;
+    border: 2px $border-white;
+    color: #111111;
+    height: 100px;
+    font-family: $font-fa;
+    font-size: 22px;
+    width: 80%;
+    margin: 30px 0px;
     z-index: 222222222;
+    left: 0;
+    bottom: 0;
+    display: flex;
+    text-align: center;
+    justify-content: center;
+    flex-direction: column;
 }
 
 .Header {
@@ -280,6 +293,41 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
                     box-shadow: $white-shadow;
                 }
             }
+        }
+    }
+}
+
+.card3{
+    &:hover{box-shadow: $blue-shadow;}
+    overflow: hidden;
+    font-family: $font-fa;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    direction: rtl;
+    width: 80%;
+    height: fit-content;
+    padding: 2.5rem;
+    margin-top: 100px;
+    border: 3px $border-white;
+    box-shadow: $white-shadow;
+    .row{
+        padding: 1rem;
+        line-height: 22px;
+        p{
+            color: #111111;
+            span{
+                color: $blue;
+                margin: 0 5px;
+            }
+        }
+    }
+
+    .last-row{
+        h1{
+            color: $blue;
+            text-align: center;
+            padding: 2rem;
         }
     }
 }
