--- a/public/style.css
+++ b/public/style.css
@@ -41,6 +41,7 @@
   flex-direction: row-reverse;
   justify-content: center;
   z-index: 5555;
+  font-family: yekan, Arial, Helvetica, sans-serif;
 }
 
 .Header .right {
@@ -57,7 +58,7 @@
   border-radius: 4px;
   text-decoration: none;
   font-weight: bold;
-  font-family: Arial, Helvetica, sans-serif;
+  font-family: yekan, Arial, Helvetica, sans-serif;
   display: flex;
   align-items: center;
   flex-direction: row;
@@ -103,20 +104,57 @@
 .Header .left {
   width: 60%;
   height: 100%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
 }
 
-.Header .left h4 {
-  color: #0070f3;
-  font-size: 25px;
-  direction: rtl;
+.Header .left .logo {
+  height: 60px;
+  margin: 0 20px;
+}
+
+.Hero {
+  height: 100vh;
+  width: 100%;
+  /*  .blink{color: rgb(121, 20, 223);
+        animation: blink  .1s ease infinite alternate;
+    }
+    @keyframes blink {
+        to{color: $blue;}
+    } */
+}
+
+.Hero div {
   position: absolute;
-  left: 15px;
-  top: 3px;
+  top: 30%;
+  word-break: keep-all;
+  left: 50%;
+  text-align: center;
+  transform: translatex(-50%);
+  direction: rtl;
+  user-select: none;
+  font-family: yekan, Arial, Helvetica, sans-serif;
+}
+
+.Hero div h1 {
+  font-size: 72px;
+}
+
+.Hero div p {
+  font-size: 25px;
+}
+
+.Hero div h1, .Hero div p, .Hero div span {
+  background-image: linear-gradient(40deg, #27c6f7, #0e8bdf, #0163f5);
+  color: transparent;
+  background-clip: text;
+  -webkit-background-clip: text;
 }
 
 .wrapper {
   position: absolute;
-  top: 300px;
+  top: 100vh;
   overflow: hidden;
   left: 50%;
   transform: translatex(-50%);
@@ -138,24 +176,29 @@
   top: -70px;
 }
 
-.wrapper .card1 {
+.card1 {
   overflow: hidden;
   font-family: yekan, Arial, Helvetica, sans-serif;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between;
-  align-items: center;
   direction: rtl;
-  width: 80%;
+  width: 100%;
   height: fit-content;
   padding: 2.5rem;
   margin-top: 100px;
   background: none;
-  border: 3px #e7e3e3 solid;
   box-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
 }
 
-.wrapper .card1 .blob {
+.card1 .space {
+  height: 50px;
+  background: none;
+  width: 100%;
+}
+
+.card1:hover {
+  box-shadow: rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
+}
+
+.card1 .blob {
   position: absolute;
   left: -110px;
   height: 200px;
@@ -163,54 +206,8 @@
   top: 85%;
 }
 
-.wrapper .card1 .left {
-  max-width: 30%;
-}
-
-.wrapper .card1 .left img {
-  height: 150px;
-}
-
-.wrapper .card1:hover {
-  box-shadow: rgba(0, 118, 255, 0.39) 0px 2px 6px 0px;
-}
-
-.wrapper .card1 .right {
-  max-width: 70%;
-  display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  justify-content: space-around;
-}
-
-.wrapper .card1 .right h1 {
-  padding: 10px 0;
-  font-size: 42px;
-  color: #111;
-}
-
-.wrapper .card1 .right .__bottom {
-  margin-top: 250px;
-}
-
-.wrapper .card1 .right .__bottom .space {
-  width: 100%;
-  background: none;
-  height: 100px;
-}
-
-.wrapper .card1 .right .__bottom h1 span {
-  font-size: inherit;
-}
-
-.wrapper .card1 .right .__bottom span {
+.card1 span {
   color: #0070f3;
-  font-size: 17px;
-}
-
-.wrapper .card1 .right .__bottom p {
-  color: #111;
-  font-size: 17px;
 }
 
 .card2 {
@@ -227,6 +224,14 @@
   margin-top: 100px;
   border: 3px #e7e3e3 solid;
   box-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
+}
+
+.card2 .svg {
+  width: 150px;
+  height: 150px;
+  position: absolute;
+  top: 50%;
+  left: -75px;
 }
 
 .card2:hover {
