--- a/public/style.scss
+++ b/public/style.scss
@@ -56,6 +56,7 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
     flex-direction: row-reverse;
     justify-content: center;
     z-index: 5555;
+    font-family: $font-fa;
 
     .right {
         width: 40%;
@@ -70,11 +71,12 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
             border-radius: 4px;
             text-decoration: none;
             font-weight: bold;
-            font-family: Arial, Helvetica, sans-serif;
+            font-family: $font-fa;
             display: flex;
             align-items: center;
             flex-direction: row;
             width: fit-content;
+
         }
 
         .home-btn {
@@ -117,17 +119,54 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
     .left {
         width: 60%;
         height: 100%;
+        display: flex;
+        align-items: center;
+        justify-content: flex-start;
 
-        h4 {
-            color: $blue;
-            font-size: 25px;
-            direction: rtl;
-            position: absolute;
-            left: 15px;
-            top: 3px;
-        }
+            
+    .logo{
+        height: 60px;
+        margin: 0 20px;
+    }
     }
 }
+
+.Hero{
+    height: 100vh;
+    width: 100%;
+
+    div{
+        position: absolute;
+        top: 30%;
+        word-break:keep-all;
+        left: 50%;
+        text-align: center;
+        transform: translatex(-50%);
+        direction: rtl;
+        user-select: none;
+        font-family: $font-fa;
+        
+        h1{ 
+            font-size: 72px;
+        }     
+        p{ font-size: 25px;}   
+        h1,p,span{
+            background-image: linear-gradient(40deg, rgb(39, 198, 247),rgb(14, 139, 223), rgb(1, 99, 245));
+            color: transparent;
+            background-clip: text;
+            -webkit-background-clip: text;
+        }
+    }
+   /*  .blink{color: rgb(121, 20, 223);
+        animation: blink  .1s ease infinite alternate;
+    }
+    @keyframes blink {
+        to{color: $blue;}
+    } */
+}
+
+
+
 
 .wrapper {
     .blob {
@@ -137,9 +176,8 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
         width: 200px;
         top: -70px;
     }
-
     position: absolute;
-    top: 300px;
+    top: 100vh;
     overflow: hidden;
     left: 50%;
     transform: translatex(-50%);
@@ -152,87 +190,37 @@ $white-shadow: rgba(250, 246, 246, 0.39) 0px 2px 6px 0px;
     align-items: center;
     flex-direction: column;
 
-    .card1 {
-        .blob {
-            position: absolute;
-            left: -110px;
-            height: 200px;
-            width: 200px;
-            top: 85%;
-        }
-
-        .left {
-            max-width: 30%;
-
-            img {
-                height: 150px;
-            }
-        }
-
-        overflow: hidden;
-        font-family: $font-fa;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-        align-items: center;
-        direction: rtl;
-        width: 80%;
-        height: fit-content;
-        padding:2.5rem;
-        margin-top: 100px;
-        background: none;
-        border: 3px $border-white;
-        box-shadow: $white-shadow;
-
-        &:hover {
-            box-shadow: $blue-shadow;
-        }
-
-
-        .right {
-
-            max-width: 70%;
-            display: flex;
-            flex-direction: column;
-            align-items: flex-start;
-            justify-content: space-around;
-
-            h1 {
-                padding: 10px 0;
-                font-size: 42px;
-                color: #111;
-
-
-            }
-
-            .__bottom {
-                .space {
-                    @include space;
-                    height: 100px;
-                }
-
-                margin-top: 250px;
-
-                h1 span {
-                    font-size: inherit;
-                }
-
-                span {
-                    color: $blue;
-                    font-size: 17px;
-                }
-
-                p {
-                    color: #111;
-                    font-size: 17px;
-
-                }
-            }
-        }
+}
+.card1 {
+    .space{height: 50px; background: none; width: 100%;}
+        &:hover {box-shadow: $blue-shadow;}
+    .blob {
+        position: absolute;
+        left: -110px;
+        height: 200px;
+        width: 200px;
+        top: 85%;
     }
+    overflow: hidden;
+    font-family: $font-fa;
+    direction: rtl;
+    width: 100%;
+    height: fit-content;
+    padding:2.5rem;
+    margin-top: 100px;
+    background: none;
+    box-shadow: $white-shadow;
+    span{color: $blue;}
 }
 
 .card2 {
+    .svg{
+        width: 150px;
+        height: 150px;
+        position: absolute;
+        top: 50%;
+        left: -75px;
+    }
     overflow: hidden;
     font-family: $font-fa;
     display: flex;
