--- a/public/style.css
+++ b/public/style.css
@@ -117,6 +117,7 @@
 .Hero {
   height: 100vh;
   width: 100%;
+  overflow: hidden;
   /*  .blink{color: rgb(121, 20, 223);
         animation: blink  .1s ease infinite alternate;
     }
@@ -125,7 +126,36 @@
     } */
 }
 
-.Hero div {
+.Hero .rec {
+  position: absolute;
+  transform: rotate(180deg);
+}
+
+.Hero .rec1 {
+  top: -450px;
+  right: -400px;
+  z-index: 2000;
+}
+
+.Hero .rec2 {
+  top: -400px;
+  right: -400px;
+}
+
+.Hero .bottom {
+  height: 400px;
+  width: 100%;
+  position: absolute;
+  bottom: -30px;
+  left: 0;
+}
+
+.Hero .bottom .wave {
+  width: 100%;
+  height: 100%;
+}
+
+.Hero .hero-text {
   position: absolute;
   top: 30%;
   word-break: keep-all;
@@ -137,15 +167,15 @@
   font-family: yekan, Arial, Helvetica, sans-serif;
 }
 
-.Hero div h1 {
+.Hero .hero-text h1 {
   font-size: 72px;
 }
 
-.Hero div p {
+.Hero .hero-text p {
   font-size: 25px;
 }
 
-.Hero div h1, .Hero div p, .Hero div span {
+.Hero .hero-text h1, .Hero .hero-text p, .Hero .hero-text span {
   background-image: linear-gradient(40deg, #27c6f7, #0e8bdf, #0163f5);
   color: transparent;
   background-clip: text;
